# ai_model_picker

./: .gitignore  PKGBUILD  README.md  ai-model-picker-0.1.0-1-any.pkg.tar.zst  pyproject.toml  rebuild.sh
ai_model_picker/: config.py  provider_models.json  selector.py  setup.py
pkg/ai-model-picker/: .BUILDINFO  .MTREE  .PKGINFO
