[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-model-picker"
version = "0.1.0"
description = "Unified AI model provider selection and configuration library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "llm", "openai", "anthropic", "google", "mistral", "configuration"]
authors = [
    {name = "Beto"}
]

dependencies = [
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/beto/ai-model-picker"
Repository = "https://github.com/beto/ai-model-picker"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_model_picker*"]

[tool.setuptools.package-data]
ai_model_picker = ["*.json"]
